--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snow</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script type="module" src="ThreeSnow/main.js"></script>
     <style>
         body {
             margin: 0;
@@ -17,12 +17,25 @@
             align-items: center;
             background-color: #8dc3ec;
         }
+
         canvas {
             width: 100%;
             height: 100%;
         }
     </style>
+
+    <script type="importmap">
+    {
+        "imports": {
+            "three": "https://unpkg.com/three@0.138.0/build/three.module.js",
+            "OrbitControls": "https://unpkg.com/three@0.138.0/examples/jsm/controls/OrbitControls.js"
+        }
+    }
+    </script>
 </head>
+
 <body>
+    <script type="module" src="ThreeSnow/main.js"></script>
 </body>
+
 </html>
